--- a/src/App.scss
+++ b/src/App.scss
@@ -7,4 +7,22 @@
 
 .App{
     font-family: 'poppins-regular';
+    background-color: #FFF;
+    height: 100vh;
+    width: 100%;
+}
+
+.icon{
+    width: 1.3em;
+    height: 1.3em;
+}
+
+.view-container{ 
+    background-color: #E3F2FD;
+    min-height: 800px;
+    position: absolute;
+    top: 85px;
+    left: 20px;
+    right: 20px;
+    border-radius: 14px;
 }
