--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,10 +1,30 @@
 @import '../../styles/colors.scss';
 
 .header{
-    background-color: $color-gray;
-    min-height: 80px;
-    height: 80px;
-    padding: 16px 24px;
+    position: relative;
     display: flex;
+    -webkit-box-align: center;
     align-items: center;
+    min-height: 85px;
+    padding: 16px;
+
+    &::after, &::before {
+        box-sizing: inherit;
+    }
+
+
+    box-shadow: none;
+    background-image: none;
+    display: flex;
+    width: 100%;
+    box-sizing: border-box;
+    flex-shrink: 0;
+    position: fixed;
+    z-index: 1100;
+    top: 0px;
+    left: auto;
+    right: 0px;
+    color: inherit;
+    background-color: rgb(255, 255, 255);
+    transition: none 0s ease 0s;
 }
