--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -32,8 +32,10 @@ $sidebar-w: 16.25em;
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .sidebar{
+        &-open{     
+            -webkit-box-shadow: 0px 0px 47px -4px rgba(0,0,0,0.51); 
+            box-shadow: 0px 0px 47px -4px rgba(0,0,0,0.51);
 
-        &-open{            
             width: $sidebar-w;
             max-width: $sidebar-w;
             transform: translate(0);
@@ -49,8 +51,9 @@ $sidebar-w: 16.25em;
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (min-width: 600px) {
     .sidebar{
-
         &-open{
+            -webkit-box-shadow: 0px 0px 47px -4px rgba(0,0,0,0.51); 
+            box-shadow: 0px 0px 47px -4px rgba(0,0,0,0.51);
             width: $sidebar-w;
             max-width: $sidebar-w;
             transform: translate(0);
@@ -65,8 +68,9 @@ $sidebar-w: 16.25em;
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-    .sidebar{
 
+    .sidebar{
+        box-shadow: none;
         &-open{
             width: $sidebar-w;
             max-width: $sidebar-w;
