--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,10 +1,10 @@
 @import '../../styles/colors.scss';
 
 .button{
-    border-radius: 11px;
+    border-radius: 0.688em;
     background-color: $color-accent;
     min-height: 2.125em;
-    min-width: 34px;
+    min-width: 2.125em;
     border: 0px;
     display: flex;
     align-items: center;
@@ -35,12 +35,14 @@
 
     .icon{
         fill: $color-primary-dark;
+        stroke: $color-primary-dark;
         transition: 0.5s;
     }
 
     &:hover .icon{
         transition: 0.8s;
-        fill: $white;
+        fill: white;
+        stroke: white;
     }
     
     &-active{
@@ -49,6 +51,7 @@
 
         .icon{
             fill: #fff;
+            stroke: white;
             transition: 0.5s;
         }
     }
