--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -1,25 +1,25 @@
 @import '../../styles/colors.scss';
 
 .search-bar{
-    min-width: 300px;
-    min-height: 50px;
+    min-width: 18.75em;
+    min-height: 3.125em;
     border: 1px solid rgb(216, 216, 216);
-    border-radius: 8px;
+    border-radius: 0.5em;
 
     display: flex;
     align-items: center;
 
     .button-primary{
-        height: 33px;
+        height: 2.063em;
     }
 
     .input-text{
-        border-radius: 20px;
+        border-radius: 1.25em;
         border: none;
         width: 100%;
-        margin-right: 80px;
-        padding-left: 15px;
-        min-height: 36px;
+        margin-right: 5em;
+        padding-left: 0.938em;
+        min-height: 2.25em;
         color: #707070;
 
         &:focus{
@@ -33,19 +33,57 @@
     }
 
     .search-icon{
-        width: 23px;
-        margin-left: 10px;
+        width: 1.438em;
+        margin-left: 0.625em;
+        stroke: #BFBFBF;
+    }
+}
+
+.search-bar-desktop{
+    @extend .search-bar;
+}
+
+.win-searchbar{
+    position: absolute;
+    background-color: white;
+    right: 1em;
+    left: 1em;
+    z-index: 201;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .search-bar-desktop {
+        display: none;
     }
 
-    .button-primary{
-        .icon{
-            stroke: $color-primary-dark;
-            fill: none;
-        }
-
-        &:hover .icon{
-            transition: 0.8s;
-            stroke: $white;
-        }
+    .header-search-btn {
+        display: block;
     }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .search-bar-desktop {
+        display: none;
+    }
+
+    .header-search-btn {
+        display: block;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .search-bar-desktop{
+        display: flex;
+    }
+
+    .win-searchbar{
+        display: none;
+    }
+
+    .header-search-btn{
+        display: none;
+    } 
 }
