:construction: Work in progress: login page created

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -10,6 +10,7 @@ $color-gray-dark: #C0C0C0;
 $color-gray-ligth: #E5E5E5;
 
 $color-black: #000000;
+$background-color: #E3F2FD;
 
 // DARK MODE --------------------------------
 
