--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,10 @@
 @import './styles/fonts.scss';
+@import './styles/colors.scss';
 
 *{
     padding: 0;
     margin: 0;
+    font-family: 'poppins-regular';
 }
 
 .icon{
