--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -48,7 +48,7 @@
     &-active{
 
         background: $color-primary radial-gradient(circle, transparent 1%, $color-primary 1%) center/15000%;
-
+        color: white;
         .icon{
             fill: #fff;
             stroke: white;
