--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -41,6 +41,10 @@
             }
         }
 
+        hr{
+            opacity: 0.15;
+        }
+
         form{
 
             display: flex;
@@ -59,6 +63,10 @@
         
                 &:focus{
                     outline: solid 2px rgba($color: $color-primary, $alpha: 0.2);
+                }
+
+                &::placeholder{
+                    opacity: 0.7;
                 }
             }
 
