--- a/src/components/sidebar/helper/menuButton/menu-button.scss
+++ b/src/components/sidebar/helper/menuButton/menu-button.scss
@@ -14,17 +14,26 @@
     align-items: center;
     margin: 0.7em;
     justify-content: flex-start;
-    padding-left: 2em;
+    padding-left: 1em;
+    font-size: 0.95em;
 
     background-position: center;
     transition: background 0.8s;
-    transition: color 0.5s;
+    transition: color 0.6s;
 
     &:hover{
         background: $color-accent radial-gradient(circle, transparent 1%, $color-accent 1%) center/15000%;
         color: $color-primary;
         transition: color 2s;
         transition: background 0.8s;
+
+        .icon{
+            svg{
+                stroke: $color-primary;
+                fill: $color-primary;
+                transition: 0.4s;
+            }
+        }
     }
 
     &:active{
@@ -41,7 +50,15 @@
     .icon{
         text-align: start;
         display: inline-block;
-        background-color: #000;
         margin-right: 0.65em;
+        align-items: center;
+        display: flex;
+
+        svg{
+            width: 100%;
+            height: 100%;
+            stroke: $color-gray;
+            fill: $color-gray;
+        }
     }
 }
