--- a/src/components/userdropdown/userDropdown.scss
+++ b/src/components/userdropdown/userDropdown.scss
@@ -27,15 +27,10 @@
     }
 
     .avatar{
-        border-radius: 50%;
-        background-color: white;
-        padding: 0.3em;
-        height: 1.8em;
-        width: 1.8em;
-
         img{
-            width: 100%;
-            height: 100%;
+            width: 2em;
+            object-fit: cover;
+            border-radius: 50%;
         }
     }
 
