--- a/src/components/userdropdown/userDropdown.scss
+++ b/src/components/userdropdown/userDropdown.scss
@@ -44,6 +44,39 @@
         box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
         border-radius: 9px;
         width: 14em;
+
+        .button-primary{
+            background-color: white;
+            width: 100%;
+            display: flex;
+            justify-content: flex-start;
+
+            .icon{
+                fill: $color-gray;
+                stroke: $color-gray;
+                margin-left: 1em;
+                margin-right: 1em;
+            }
+            
+            &:hover{
+                background: $color-accent radial-gradient(circle, transparent 1%, $color-accent 1%) center/15000%;
+                transition: color 2s;
+                transition: background 0.8s;
+                color: $color-primary;
+
+                .icon{
+                    transition: 0.8s;
+                    fill: $color-primary;
+                    stroke: $color-primary;
+                }
+            }
+        
+            &:active{
+                background-color: #ffffffb0;
+                background-size: 100%;
+                transition: background 0s;
+            }
+        }
     }
 
     .icon{
