--- a/src/components/userdropdown/userDropdown.scss
+++ b/src/components/userdropdown/userDropdown.scss
@@ -10,7 +10,7 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
-
+    font-size: 0.9em;
     position: relative;
 
     background-color: #E3F2FD;
@@ -36,20 +36,25 @@
 
     .dropdown-window{
         @extend .ccard;
-        padding: 7px;
+        padding: 1em;
         position: absolute;
         z-index: 10;
         top: 4em;
         background: #FFFFFF;
         box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
         border-radius: 9px;
-        width: 14em;
+        width: 17em;
+
+        .title{
+            color: #000;
+        }
 
         .button-primary{
             background-color: white;
             width: 100%;
             display: flex;
             justify-content: flex-start;
+            height: 2.5em;
 
             .icon{
                 fill: $color-gray;
@@ -87,6 +92,19 @@
 
     &:hover{
         background: #2194F0 radial-gradient(circle, transparent 1%, #2194F0 1%) center/15000%;
+        color: $white;
+        transition: color 2s;
+        transition: background 0.8s;
+
+        .icon{
+            transition: 0.8s;
+            fill: white;
+            stroke: white;
+        }
+    }
+
+    &-active{
+        background: #2194F0;
         color: $white;
         transition: color 2s;
         transition: background 0.8s;
