:sparkles: Recover account

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -17,3 +17,13 @@
     font-family: 'poppins-thin';
     src: url('../fonts/poppins/Poppins-Thin.ttf');
 }
+
+@font-face {
+    font-family: 'poppins-semiBold';
+    src: url('../fonts/poppins/Poppins-SemiBold.ttf');
+}
+
+@font-face {
+    font-family: 'poppins-bold';
+    src: url('../fonts/poppins/Poppins-Bold.ttf');
+}
