--- a/src/pages/Restore/styles.scss
+++ b/src/pages/Restore/styles.scss
@@ -1,6 +1,6 @@
 @import "../../styles/colors.scss";
 
-.login{
+.recover{
     background-color: $background-color;
     width: 100%;
     height: 100vh;
@@ -46,13 +46,20 @@
             opacity: 0.15;
         }
 
-        form{
+        .title{
+            color: $color-primary-dark;
+            font-size: 1.1em;
+            padding-bottom: 0.5em;
+            font-style: normal;
+            font-family: 'poppins-bold';
+            font-size: 1.2em;
+        }
 
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            width: 100%;
+        form{
+            padding:2.3em;
+            position: absolute;
+            top: 7em;
+            bottom: 0;
 
             input{
                 width: 100%;
@@ -71,10 +78,17 @@
                 }
             }
 
-            .button-primary{
-                width: 100%;
-                border-radius: 2em;
-                padding: 0.7em;
+            .action-area{
+                position: absolute;
+                left: 2.3em;
+                right: 2.3em;                
+                bottom: 0;
+                padding-bottom: 1em;
+                .button-primary{
+                    width: 100%;
+                    border-radius: 2em;
+                    padding: 0.7em;
+                }
             }
         }
 
@@ -105,7 +119,7 @@
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-    .login{
+    .recover{
         min-width: 20em;
         overflow: auto;
         .ccard{            
