--- a/src/components/progressbar/progressbar.scss
+++ b/src/components/progressbar/progressbar.scss
@@ -5,7 +5,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 4px;
+    height: 0.35em;
     width: 100%;
     overflow: hidden;
     z-index: 201;
@@ -13,12 +13,10 @@
   
   .progress-bar-value {
     width: 100%;
-    height: 100%;
+    height: 100%;    
     background-color: $color-primary;
     animation: indeterminateAnimation 1s infinite linear;
     transform-origin: 0% 50%;
-    background: #0FB4B9;
-    box-shadow: 0px 0px 4px #0FB4B9;
   }
   
   @keyframes indeterminateAnimation {
@@ -32,3 +30,4 @@
       transform:  translateX(100%) scaleX(0.5);
     }
   }
+  
