:construction: Work in progress :: Editing language view

--- a/src/views/languages/styles.scss
+++ b/src/views/languages/styles.scss
@@ -39,6 +39,15 @@
             background-color: aqua;
             top: 2em;
         }
+
+        #edit-icon{
+            display: none;
+        }
+
+        &:hover #edit-icon{
+            display: block;
+        }
+
     }
 
     span{
