--- a/src/views/question/helpers/listening/styles.scss
+++ b/src/views/question/helpers/listening/styles.scss
@@ -1,4 +1,21 @@
-.listening-view{
+@import '../../../../components/button/button.scss';
+
+.speaking-view{
     margin-top: 2em;
     background-color: #fff;
+    position: relative;
+    
+
+    input::file-selector-button {
+        @extend .button-primary;
+        font-size: 0.9em;
+        padding: 0.5em;
+        display: inline-block;
+    }
+
+    .navigation-buttons{
+        position: absolute;
+        top: -2em;
+        right: 0;
+    }
 }
