--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -34,6 +34,7 @@
     background-color: #F6FBFF;
     margin-left: 2em;
     position: relative;
+    user-select: none;
 
     .phone-header{
         position: absolute;
@@ -83,5 +84,8 @@
         background-color: #F6FBFF;
         bottom: 0;
         width: 100%;
+    }
+
+    .hidden-audio-reproductor{
     }
 }
