--- a/src/views/question/helpers/listening/styles.scss
+++ b/src/views/question/helpers/listening/styles.scss
@@ -19,3 +19,76 @@
         right: 0;
     }
 }
+
+.phone-preview{
+    height: 45em;
+    max-width: 23em;
+    min-width: 23em;
+    width: 23em;
+    background-color: #F6FBFF;
+    margin-left: 2em;
+    position: relative;
+    user-select: none;
+
+    .phone-header{
+        position: absolute;
+        display: flex;
+        justify-content: space-between;
+        padding: 0.5em;
+        padding-left: 1.2em;
+        padding-right: 1.2em;
+        font-weight: bold;
+        width: 100%;
+    }
+
+    .phone-container{
+        margin-top: 2em;
+        padding: 2em;
+        overflow: auto;
+        max-height: 43em;
+        padding-bottom: 5em;
+
+        .phone-question-index{
+            font-size: 2em;
+            font-weight: bold;
+        }
+
+        .phone-title{
+            font-size: 1.2em;
+            margin-top: 1em;
+            margin-bottom: 1em;
+        }
+
+        .phone-description{
+            font-size: 1em;
+            margin-top: 1em;
+        }
+
+        img{
+            width: 100%;
+            border-radius: 0.5em;
+        }
+
+        
+        .option{
+            padding: 0.5em;
+            border-radius: 0.3em;
+
+
+            &:hover{
+                background-color: #D8F3F4;
+            }
+
+            &:active{
+                background-color: #f5f5f5;
+            }
+
+            .option-letter{
+                color: #32BFC3;
+                margin-right: 1em;
+            }
+        }
+        
+        
+    }
+}
