:sparkles: New feature :: Listening view

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,3 +14,26 @@
     fill: #08677C;
     cursor: pointer;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+    border-radius: 5px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(194, 194, 194); 
+    border-radius: 5px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(134, 134, 134); 
+    border-radius: 5px;
+  }
