:hammer: CODE REFACTOR

--- a/src/components/navigationButtons/styles.scss
+++ b/src/components/navigationButtons/styles.scss
@@ -11,6 +11,8 @@
         svg{
             fill: #FFF;
             padding: 0.5em;
+            width: 2.3em;
+            height: 2.3em;
         }
 
         .arrow-left{
