--- a/src/views/question/helpers/reading/styles.scss
+++ b/src/views/question/helpers/reading/styles.scss
@@ -27,6 +27,13 @@
         width: 100%;
         margin-top: 1em;
     }
+
+    textarea{
+        width: 100%;
+        border-radius: 0.3em;
+        border: 1px solid rgb(175, 175, 175);
+        padding: 0.3em;
+    }
 }
 
 .phone-preview{
