:construction: Work in progress :: Drawer alerts and info

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -5,3 +5,30 @@
 .rotate-right{
     transform: rotate(-90deg);
 }
+
+
+/*Tamaños de fuentes*/
+
+.fs{
+    font-size: 1em;
+}
+
+.fs1{
+    font-size: 1em;
+}
+
+.fs2{
+    font-size: 1.3em;
+}
+
+.fs3{
+    font-size: 1.5em;
+}
+
+.fs4{
+    font-size: 1.7em;
+}
+
+.fbold{
+    font-weight: bold;
+}
