--- a/src/views/question/helpers/reading/styles.scss
+++ b/src/views/question/helpers/reading/styles.scss
@@ -14,6 +14,7 @@
     }
 
     .navigation-buttons{
+        visibility: hidden;
         position: absolute;
         top: -2em;
         right: 0;
@@ -26,6 +27,7 @@
         min-height: 3em;
         width: 100%;
         margin-top: 1em;
+        position: relative;
 
         &-is-editing{
             border: 4px solid #FBE9E7;
@@ -40,6 +42,48 @@
         padding: 0.3em;
     }
 }
+
+.ccard{
+    min-width: 26em;
+    position: relative;
+}
+
+.floatbtn{
+    position: fixed;
+    bottom:3em;
+    right: 2.5em;
+    max-height: 50px;
+    z-index: 2200;
+    border-radius: 50% !important;
+    height: 4.2em;
+    width: 4.2em;
+    max-width: 4.2em;
+    max-height: 4.2em;
+    -webkit-box-shadow: 3px 14px 30px -9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 3px 14px 30px -9px rgba(0,0,0,0.75);
+    box-shadow: 3px 14px 30px -9px rgba(0,0,0,0.75);
+    background: #08677C;
+
+    svg{
+        width: 2.2em !important;
+        height: 2.2em !important;
+    }
+}
+
+/* Small devices such as large phones (640px and up) */
+@media only screen and (min-width: 40em) {
+    .floatbtn{
+        right: 2.5em !important;
+    }
+}
+
+/* Medium devices such as tablets (768px and up) */
+@media only screen and (min-width: 60em) {
+    .floatbtn{
+        right: 28em !important;
+    }
+}
+
 
 .phone-preview{
     height: 45em;
@@ -63,11 +107,15 @@
     }
 
     .phone-container{
-        margin-top: 2em;
-        padding: 2em;
+        padding: 1em;
         overflow: auto;
-        max-height: 43em;
+        max-height: 37.5em;
         padding-bottom: 5em;
+        border-radius: 0.8em;
+        border: 1px solid #969696;
+        margin: 1.2em;
+        padding: 1.2em;
+        margin-top: 2.5em;
 
         .phone-question-index{
             font-size: 2em;
@@ -75,9 +123,10 @@
         }
 
         .phone-title{
-            font-size: 1.2em;
-            margin-top: 1em;
+            font-size: 1.4em;
+            margin-top: 0.5em;
             margin-bottom: 1em;
+            font-weight: bold;
         }
 
         .phone-description{
@@ -120,7 +169,5 @@
                 margin-right: 1em;
             }
         }
-        
-        
     }
 }
