--- a/src/views/question/styles.scss
+++ b/src/views/question/styles.scss
@@ -1,7 +1,7 @@
 @import '../../styles/colors.scss';
 
 .question-view{
-    padding: 1em;
+    padding-bottom: 1em;
 
     .nav-link{
         cursor: pointer;
