--- a/src/views/question/helpers/reading/styles.scss
+++ b/src/views/question/helpers/reading/styles.scss
@@ -28,6 +28,7 @@
         width: 100%;
         margin-top: 1em;
         position: relative;
+        overflow-x: auto;
 
         &-is-editing{
             border: 4px solid #FBE9E7;
