:sparkles: New feature :: Dashboard view created

--- a/src/views/dashboard/styles.scss
+++ b/src/views/dashboard/styles.scss
@@ -6,4 +6,14 @@
     .ccard{
         min-width: 2em;
     }
+
+    .my-chart{
+        display: flex;
+        justify-content: center;
+        min-height: 16em;        
+    }
+
+    .progress-graph-container{
+        margin-bottom: 2em;
+    }
 }
