:fire: Removing code/files :: Use Dashboard

--- a/src/views/dashboard/styles.scss
+++ b/src/views/dashboard/styles.scss
@@ -10,7 +10,8 @@
     .my-chart{
         display: flex;
         justify-content: center;
-        min-height: 16em;        
+        min-height: 16em; 
+        height: 20em;       
     }
 
     .progress-graph-container{
