:construction: Work in progress :: UX reading view image Field

--- a/src/components/phoneContainer/styles.scss
+++ b/src/components/phoneContainer/styles.scss
@@ -48,4 +48,10 @@
         height: 2.5em;
         width: 2.5em;
     }
+
+    .label{
+        margin: 0;
+        font-size: small;
+        color: #616161;
+    }
 }
