--- a/src/components/phoneContainer/descriptionField/styles.scss
+++ b/src/components/phoneContainer/descriptionField/styles.scss
@@ -7,17 +7,14 @@
         border-radius: 0.7em;
         min-height: 5em;
         padding: 0.5em;
-        padding-bottom: 2.5em;
-        display: flex;
-        
+        padding-bottom: 2.5em;       
 
         .action-btn {
             position: absolute;
             right: 0.5em;
             bottom: 0.5em;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        }
-        
+        }        
 
         .word{            
             display: inline-block;
@@ -34,6 +31,14 @@
             background-color: #0090f0;
             padding-left: 15px;
             color: #FFFFFF;
+          }
+
+          textarea{
+            border: none;
+
+            &:focus{
+              outline: 2px solid #D8F3F4;
+            }
           }
     }
 }
