--- a/src/components/Dialog/styles.scss
+++ b/src/components/Dialog/styles.scss
@@ -3,16 +3,19 @@
     right: 0;
     bottom: 0;
     top: 0;
-    position: absolute;
+    position: fixed;
     border-radius: 1em;
-    //backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
     z-index: 1101;
-    background-color: #2525259a;
+    //background-color: #2525259a;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow-y: auto;
     overflow-x: auto;
+    width: 100%;
+    height: 100%;
+    
 
     .dialog_container{
         width: 30em;
@@ -21,6 +24,8 @@
         border-radius: 1em;
         padding: 2em;
         position: relative;
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+        margin-top: 3em;
 
         .dialog_content{
             position: relative;
