--- a/src/views/question/helpers/reading/helper/Dialogs/styles.scss
+++ b/src/views/question/helpers/reading/helper/Dialogs/styles.scss
@@ -6,13 +6,58 @@
         font-weight: bold;
     }
 
-    .toglee-area{
+    .option{
+        border-radius: 0.7em;
+        border: 2px solid #96969634;
         display: flex;
-        align-content: flex-start;
+        justify-content: space-between;
+        padding: 0.3em;
+        margin-bottom: 0.7em;
 
-        .togleeBtn{
-            margin-top: 1.5em;
-            margin-left: 1em;
+        &:hover{
+            background-color: #D8F3F4;
+        }
+
+        input[type=text]{
+            border: none;
+            width: 80%;
+            margin-left: 0.7em;
+            background-color: inherit;
+    
+            &:focus{
+                outline: none;
+            }
+        }
+
+        input[type=radio]{
+            height: 1.2em;
+            width: 1.2em;
+            margin-top: 0.5em;
+            margin-right: 1em;
+        }
+    }
+
+    .add-option{
+        border-radius: 0.7em;
+        border: 2px dashed #96969686;
+        display: flex;
+        justify-content: space-between;
+        padding: 0.3em;
+        margin-bottom: 0.7em;
+        width: 100%;
+        height: 2.7em;
+        text-align: center;
+        justify-content: center;
+        vertical-align: middle;
+        align-items: center;
+        cursor: pointer;
+
+        &:hover{
+            background-color: #D8F3F4;
+        }
+
+        &:active{
+            background-color: #d8f3f480;
         }
     }
 }
