:sparkles: New feature :: Reading view UX updated

--- a/src/components/form/optionField/styles.scss
+++ b/src/components/form/optionField/styles.scss
@@ -29,6 +29,7 @@
         margin-right: 0.5em;
         margin-left: 0.5em;
         background-color: inherit;
+        height: fit-content;
 
         &:focus{
             outline: none;
