--- a/src/components/phoneContainer/styles.scss
+++ b/src/components/phoneContainer/styles.scss
@@ -9,7 +9,7 @@
     
 
     .phone-header{
-        display: flex;
+        display: inline-flex;
         justify-content: space-between;
         padding: 0.5em;
         padding-left: 1.2em;
