--- a/src/views/users/helpers/styles.scss
+++ b/src/views/users/helpers/styles.scss
@@ -41,4 +41,10 @@
             transition: 0.5s;
         }
     }
+
+    .graph{
+        margin-top: 4em;
+        display: flex;
+        justify-content: center;
+    }
 }
