:lipstick: Cosmetic :: Showing additional information (Questions)

--- a/src/views/questions/styles.scss
+++ b/src/views/questions/styles.scss
@@ -58,6 +58,14 @@
         &:active{
             background-color: #e2ecf1;
         }
+
+        .q-type{
+            text-transform: capitalize;
+        }
+
+        .q-label{
+            color: #20AFB5;
+        }
     }
 
     span{
